--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,10 @@
+4.16.1
+======
+- Revamp the documentation to modernize and uniformize accross 
+components
+- Fix keyboard navigation when only one item is present (#53)
+
+
 4.16.0
 ======
 - Focus must not be required in single click mode (Issue #190)
