Updates for release

--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,8 @@
+4.16.2
+======
+- Properly initialize GdkRectangle to prevent crash (Issue #57)
+
+
 4.16.1
 ======
 - Revamp the documentation to modernize and uniformize accross 
