--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,31 @@
+4.17.0
+======
+- Keep execute permission bit after launcher modification (Issue #64)
+- Deprecate ExoBinding and ExoMutualBinding In favor of GBinding
+- Free hover_path in tree-view if not NULL
+- Drop preferences-desktop-default-applications icon
+- Properly initialize GdkRectangle to prevent crash (Issue #57)
+- Fix autotools deprecation warnings
+- Revamp the documentation to uniformize accross components
+- Fix compilation warnings
+- exo-icon-chooser-dialog: Throttle search requests
+- exo-icon-chooser-dialog: Focus filter entry by default
+- exo-icon-chooser-dialog: Set default to show to all icons
+- exo-icon-chooser-dialog: Speed up sorting the icon view model
+- Fix keyboard navigation when only one item is present (#53)
+- configure.ac: Allow cross-compiling
+- Translation Updates:
+  Amharic, Arabic, Armenian, Armenian (Armenia), Asturian, Belarusian,
+  Bengali, Bulgarian, Catalan, Chinese (Hong Kong), Croatian, Czech,
+  Danish, Dutch, Eastern Armenian, English (Australia), English (United
+  Kingdom), Estonian, Finnish, Galician, German, Greek, Hebrew,
+  Hungarian, Icelandic, Interlingue, Italian, Kabyle, Kannada, Kazakh,
+  Korean, Latvian, Lithuanian, Malay, Norwegian Bokmål, Norwegian
+  Nynorsk, Occitan (post 1500), Panjabi (Punjabi), Persian (Iran),
+  Polish, Portuguese, Romanian, Russian, Serbian, Slovak, Slovenian,
+  Spanish, Telugu, Thai, Turkish, Ukrainian, Urdu, Urdu (Pakistan),
+  Uyghur
+
 4.16.0
 ======
 - Focus must not be required in single click mode (Issue #190)
