Updates for release

--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,13 @@
+4.17.3 (2022-11-01)
+======
+- Deprecate exo-string functions
+- Deprecate exo_noop_*
+- Save clipboard before dialog closes
+- Fix horizontal smooth scrolling in compact view (Issue #86)
+- Do not use exo_noop
+- Translation Updates:
+  Georgian, Portuguese, Turkish, Welsh
+
 4.17.2
 ======
 - exo-die: Don't touch exe line in .desktop files
