Updates for release

--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,10 @@
+4.17.4 (2022-12-01)
+======
+- Fix blurriness in exo-desktop-item-edit icon when UI scale > 1
+- Fix blurriness in ExoThumbnailPreview when UI scale > 1
+- Fix icon cell renderer blurriness when UI scale > 1
+
+
 4.17.3 (2022-11-01)
 ======
 - Deprecate exo-string functions
