--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,9 @@
+4.18.0 (2022-12-15)
+======
+- build: Bump requirements for Xfce 4.18
+- Translation Updates:
+  Hungarian, Turkish
+
 4.17.4 (2022-12-01)
 ======
 - Fix blurriness in exo-desktop-item-edit icon when UI scale > 1
