--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,16 @@
+4.19.0 (2023-10-15)
+======
+- I18n: Update po/LINGUAS list
+- Switch from intltool to gettext (Issue xfce4-dev-tools #41)
+- exo-open: (Issue #108) Relaxed URI check
+- Move cairo_save below loop continue
+- exo: Revert "Avoid truncated text in small zoom levels (#42)"
+- exo-die: Resolve symlink when saving .desktop file
+- IconView,TreeView : Keep type ahead search box inside view widget
+- Load icons using icon theme scaling functions correctly
+- Translation Updates:
+  Greek, Japanese, Portuguese
+
 4.18.0 (2022-12-15)
 ======
 - build: Bump requirements for Xfce 4.18
