--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,37 @@
+4.19.1 (2024-11-01)
+======
+- exo-tree-view: Add Ctrl+Shift+Click functionality (#116)
+- exo-icon-chooser-dialog: Fix icon leaks
+- Add option to exo-desktop-item-edit to print the filename
+- build: Bump requirements for Xfce 4.20
+- exo-icon-view: layout as well for empty view (Issue #118)
+- exo-open: Fix GError leak
+- exo-open: Fix GOptionContext memory leak
+- build: clang: Use gpointer cast to silence -Wcast-align
+- build: clang: Silence -Wcast-align
+- build: Use AM_DISTCHECK_CONFIGURE_FLAGS
+- build: Fix GLIB_VERSION_MIN_REQUIRED redefined
+- exo-icon-view: Use GSequence instead of GList to improve performance
+- exo: Explicitly add GIO_UNIX_CFLAGS
+- build: Use XDT_VERSION_INIT and get rid of configure.ac.in
+- build: Add missing GETTEXT_PACKAGE definition
+- Fix deprecation (libxfce4ui#94)
+- Fix non X11 build (Fixes #111)
+- build: Check for bind_textdomain_codeset
+- Translation Updates:
+  Albanian, Amharic, Arabic, Armenian, Armenian (Armenia), Asturian,
+  Azerbaijani, Azerbaijani (Azerbaijan), Basque, Belarusian, Bengali,
+  Bulgarian, Catalan, Chinese (China), Chinese (Hong Kong), Chinese
+  (Taiwan), Croatian, Czech, Danish, Dutch, Eastern Armenian, English
+  (Australia), English (United Kingdom), Estonian, Finnish, French,
+  Galician, Georgian, German, Greek, Hebrew, Hungarian, Icelandic,
+  Indonesian, Interlingue, Italian, Japanese, Kabyle, Kannada, Kazakh,
+  Korean, Latvian, Lithuanian, Malay, Norwegian Bokmål, Norwegian
+  Nynorsk, Occitan (post 1500), Panjabi (Punjabi), Persian (Iran),
+  Polish, Portuguese, Portuguese (Brazil), Romanian, Russian, Serbian,
+  Slovak, Slovenian, Spanish, Swedish, Telugu, Thai, Turkish,
+  Ukrainian, Urdu, Urdu (Pakistan), Uyghur, Vietnamese, Welsh
+
 4.19.0 (2023-10-15)
 ======
 - I18n: Update po/LINGUAS list
