Updates for release

--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,13 @@
+4.19.2 (2024-12-01)
+======
+- I18n: Update po/LINGUAS list
+- exo-die: Fix string leak in exo_die_g_key_file_set_locale_value
+- Translation Updates:
+  Belarusian, Czech, English (United Kingdom), French, Galician,
+  German, Japanese, Kazakh, Lithuanian, Occitan (post 1500), Polish,
+  Portuguese, Portuguese (Brazil), Serbian, Spanish, Swedish, Turkish,
+  Uzbek, Vietnamese
+
 4.19.1 (2024-11-01)
 ======
 - exo-tree-view: Add Ctrl+Shift+Click functionality (#116)
