Updates for release

--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,27 @@
+4.21.0 (2025-03-20)
+======
+exo is deprecated in favor of libxfce4ui and libxfce4util as of
+development version 4.21.0. The last stable release before archiving
+the repository will be 4.22.0. See
+https://gitlab.xfce.org/xfce/exo/-/merge_requests/87
+and the links it contains for details.
+
+- Update copyright year
+- Deprecate exo-job and exo-simple-job
+- Deprecate binaries
+- Deprecate exo-tree-view
+- Deprecate exo-icon-chooser-dialog and friends
+- Deprecate exo-gtk-extensions
+- Deprecate exo-gdk-pixbuf-extensions
+- Deprecate exo-execute
+- I18n: Update po/LINGUAS list
+- Properly check iterator before usage (#124)
+- Fix code style
+- exo-tree-view: Allow Ctrl+Shift+Click in single click mode
+- Translation Updates:
+  Albanian, Catalan, Danish, Estonian, Polish, Portuguese, Romanian,
+  Russian, Slovak, Slovenian, Venetian
+
 4.20.0 (2024-12-15)
 ======
 
